add webapp url
