# src/main/kotlin/com/wutsi/platform/tenant/dto/Tenant.kt
@@ -1,11 +1,16 @@
 package com.wutsi.platform.tenant.dto
 
+import kotlin.Long
+import kotlin.String
+import kotlin.collections.List
+
 public data class Tenant(
     public val id: Long = 0,
     public val name: String = "",
     public val domainName: String = "",
     public val supportEmail: String = "",
     public val installUrl: String = "",
+    public val webappUrl: String = "",
     public val currency: String = "",
     public val currencySymbol: String = "",
     public val numberFormat: String = "",
